--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </li>
             <li id="chauve_souris">
                 <label>
-                    <input type="checkbox" id="chauve_souris_box" value="Ailes de chauve souris">
-                    Ailes de chauve souris
+                    <input type="checkbox" id="chauve_souris_box" value="Ailes de chauve-souris">
+                    Ailes de chauve-souris
                 </label>
                 <img src="./img/chauve_souris.svg" alt="Ailes de chauves souris">
             </li>
@@ -44,14 +44,14 @@
             </li>
             <li id="petale">
                 <label>
-                    <input type="checkbox" id="petale_box" value="Pétales de fleur">
+                    <input type="checkbox" id="petale_box" value="Pétale de fleur">
                     Pétales de fleur
                 </label>
                 <img src="./img/petale.svg" alt="Petales">
             </li>
             <li id="phenix">
                 <label>
-                    <input type="checkbox" id="phenix" value="Plumes de Phenix">
+                    <input type="checkbox" id="phenix" value="Plumes de Phénix">
                     Plumes de Phenix
                 </label>
                 <img src="./img/phenix.svg" alt="Plume de phenix">
